| Bug #12028 | Hostname option in [NDB DEFAULT] section not used | ||
|---|---|---|---|
| Submitted: | 19 Jul 2005 11:54 | Modified: | 29 Jul 2005 19:41 |
| Reporter: | Max Mether | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1,5.0 | OS: | Linux (Linux) |
| Assigned to: | Tomas Ulin | Target Version: | |
[19 Jul 2005 11:54]
Max Mether
[19 Jul 2005 14:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27300
[19 Jul 2005 15:26]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27301
[19 Jul 2005 16:12]
Tomas Ulin
pushed into 4.1.14 (will be merged to 5.0.10)
[29 Jul 2005 19:41]
Mike Hillyer
Documented in 4.1.14 and 5.0.10 changelogs: <listitem><para>NDB ignored the <literal>Hostname</literal> option in the <literal>NDBD DEFAULT</literal> section of the NDB configuration file. (Bug #12028)</para></listitem>
