BUG#12028, cannot use default value for HostName in cluster config + added switch --print-full-config + removed unused REP configuration